test/corpus/manual_examples.txt
================================================================================
G code overview 3.1
================================================================================

#3 = 15 (set parameter 3 to 15)

--------------------------------------------------------------------------------

(source_file
  (line
    (assignment
      (numbered_parameter)
      (literal))
    (comment)))

================================================================================
G code overview 3.3
================================================================================

#<_endmill_dia> = 0.049
#<_endmill_rad> = [#<_endmill_dia>/2.0]
o100 call [0.0] [0.0] [#<_inside_cutout>-#<_endmill_dia>] [#<_Zcut>] [#<_feedrate>]

--------------------------------------------------------------------------------

(source_file
  (line
    (assignment
      left: (named_global_parameter)
      right: (literal)))
  (line
    (assignment
      left: (named_global_parameter)
      right: (expression
        (binary_expr
          left: (named_global_parameter)
          right: (literal)))))
  (line
    (call
      (o_number)
      (expression
        (literal))
      (expression
        (literal))
      (expression
        (binary_expr
          left: (named_global_parameter)
          right: (named_global_parameter)))
      (expression
        (named_global_parameter))
      (expression
        (named_global_parameter)))))

================================================================================
G code overview 4 ex 1
================================================================================

o100 if [EXISTS[#<_ini[setup]xpos>]]
  (debug, [setup]xpos exists: #<_ini[setup]xpos>)
  x1
o100 else
  (debug, [setup]xpos does not exist)
o100 endif

--------------------------------------------------------------------------------

(source_file
  (line
    (if
      (o_number)
      condition: (expression
        (func_call_expr
          (expression
            (named_global_parameter))))
      (body
        (line
          (control_comment
            (named_global_parameter)))
        (line
          (value_word
            (literal))))
      (else
        (o_number)
        (body
          (line
            (control_comment))))
      (endif
        (o_number)))))

================================================================================
G code overview 4 ex 2
================================================================================

(debug, #<_hal[motion-controller.time]>)

--------------------------------------------------------------------------------

(source_file
  (line
    (control_comment
      (named_global_parameter))))

================================================================================
G code overview 4 ex 3
================================================================================

o100 if [EXISTS[#<_hal[motion-controller.time]>]]
  (debug, [motion-controller.time] exists: #<_hal[motion-controller.time]>)
o100 else
  (debug, [motion-controller.time] does not exist)
o100 endif

--------------------------------------------------------------------------------

(source_file
  (line
    (if
      (o_number)
      condition: (expression
        (func_call_expr
          (expression
            (named_global_parameter))))
      (body
        (line
          (control_comment
            (named_global_parameter))))
      (else
        (o_number)
        (body
          (line
            (control_comment))))
      (endif
        (o_number)))))

================================================================================
G code overview 8 ex 1
================================================================================

o<test> sub
o10 if [EXISTS[#<_global>]]
    (debug, _global exists and has the value #<_global>)
o10 else
    (debug, _global does not exist)
o10 endif
o<test> endsub

--------------------------------------------------------------------------------

(source_file
  (line
    (sub
      (o_name)
      (body
        (line
          (if
            (o_number)
            condition: (expression
              (func_call_expr
                (expression
                  (named_global_parameter))))
            (body
              (line
                (control_comment
                  (named_global_parameter))))
            (else
              (o_number)
              (body
                (line
                  (control_comment))))
            (endif
              (o_number)))))
      (endsub
        (o_name)))))

================================================================================
G code overview 8 ex 2
================================================================================

o<test> call
#<_global> = 4711
o<test> call
m2

--------------------------------------------------------------------------------

(source_file
  (line
    (call
      (o_name)))
  (line
    (assignment
      (named_global_parameter)
      (literal)))
  (line
    (call
      (o_name)))
  (line
    (m)))

================================================================================
G code overview 12 ex 1
================================================================================

F100 G1 @.5 ^90
G91 @.5 ^90
@.5 ^90
@.5 ^90
@.5 ^90
G90 G0 X0 Y0 M2

--------------------------------------------------------------------------------

(source_file
  (line
    (value_word
      (literal))
    (g)
    (polar_distance
      (literal))
    (polar_angle
      (literal)))
  (line
    (g)
    (polar_distance
      (literal))
    (polar_angle
      (literal)))
  (line
    (polar_distance
      (literal))
    (polar_angle
      (literal)))
  (line
    (polar_distance
      (literal))
    (polar_angle
      (literal)))
  (line
    (polar_distance
      (literal))
    (polar_angle
      (literal)))
  (line
    (g)
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (m)))

================================================================================
G code overview 12 ex 1
================================================================================

F100 G1 @.5 ^90
G91 ^90
^90
^90
^90
G90 G0 X0 Y0 M2

--------------------------------------------------------------------------------

(source_file
  (line
    (value_word
      (literal))
    (g)
    (polar_distance
      (literal))
    (polar_angle
      (literal)))
  (line
    (g)
    (polar_angle
      (literal)))
  (line
    (polar_angle
      (literal)))
  (line
    (polar_angle
      (literal)))
  (line
    (polar_angle
      (literal)))
  (line
    (g)
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (m)))

================================================================================
G code overview 14
================================================================================

G0 (Rapid to start) X1 Y1
G0 X1 Y1 (Rapid to start; but don't forget the coolant)
M2 ; End of program.

--------------------------------------------------------------------------------

(source_file
  (line
    (g)
    (comment)
    (value_word
      (literal))
    (value_word
      (literal)))
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (comment))
  (line
    (m)
    (comment)))

================================================================================
G code overview 15
================================================================================

(MSG, This is a message)

--------------------------------------------------------------------------------

(source_file
  (line
    (control_comment)))

================================================================================
G code overview 20
================================================================================

(print,endmill dia = #<_endmill_dia>)
(print,value of variable 123 is: #123)

--------------------------------------------------------------------------------

(source_file
  (line
    (control_comment
      (named_global_parameter)))
  (line
    (control_comment
      (numbered_parameter))))

================================================================================
G code overview 24
================================================================================

G17 G20 G40 G49 G54 G80 G90 G94

--------------------------------------------------------------------------------

(source_file
  (line
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)
    (g)))

================================================================================
G codes 3
================================================================================

G90 (set absolute distance mode)
G0 X1 Y-2.3 (Rapid linear move from current location to X1 Y-2.3)
M2 (end program)

--------------------------------------------------------------------------------

(source_file
  (line
    (g)
    (comment))
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (comment))
  (line
    (m)
    (comment)))

================================================================================
G codes 4
================================================================================

G90 (set absolute distance mode)
G1 X1.2 Y-3 F10 (linear move at a feed rate of 10 from current position to X1.2 Y-3)
Z-2.3 (linear move at same feed rate from current position to Z-2.3)
Z1 F25 (linear move at a feed rate of 25 from current position to Z1)
M2 (end program)

--------------------------------------------------------------------------------

(source_file
  (line
    (g)
    (comment))
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (comment))
  (line
    (value_word
      (literal))
    (comment))
  (line
    (value_word
      (literal))
    (value_word
      (literal))
    (comment))
  (line
    (m)
    (comment)))

================================================================================
G codes 5.2-5.3 ex 1
================================================================================

G0 X0 Y0
G2 X1 Y1 I1 F10 (clockwise arc in the XY plane)

--------------------------------------------------------------------------------

(source_file
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal)))
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (comment)))

================================================================================
G codes 5.2-5.3 ex 2
================================================================================

G0 X0 Y0
G2 X0 Y1 I1 J0.5 F25 (clockwise arc in the XY plane)
G3 X0 Y0 I1 J-0.5 F25 (counterclockwise arc in the XY plane)

--------------------------------------------------------------------------------

(source_file
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal)))
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (comment))
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (comment)))

================================================================================
G codes 5.2-5.3 ex 3
================================================================================

G0 X0 Y0 Z0
G17 G2 X10 Y16 I3 J4 Z-1 (helix arc with Z added)

--------------------------------------------------------------------------------

(source_file
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal)))
  (line
    (g)
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (comment)))

================================================================================
G codes 5.2-5.3 ex 4
================================================================================

G0 X0 Y0 Z0
G2 X0 Y1 Z-1 I1 J0.5 P2 F25

--------------------------------------------------------------------------------

(source_file
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal)))
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))))

================================================================================
G codes 5.2-5.3 ex 5
================================================================================

G17 G2 X10 Y15 R20 Z5 (radius format with arc)

--------------------------------------------------------------------------------

(source_file
  (line
    (g)
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (comment)))

================================================================================
G codes 6
================================================================================

G4 P0.5 (wait for 0.5 seconds before proceeding)

--------------------------------------------------------------------------------

(source_file
  (line
    (g)
    (value_word
      (literal))
    (comment)))

================================================================================
G codes 7 ex 1
================================================================================

G90 G17
G0 X0 Y0
G5 I0 J3 P0 Q-3 X1 Y1

--------------------------------------------------------------------------------

(source_file
  (line
    (g)
    (g))
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal)))
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))))

================================================================================
G codes 7 ex 2
================================================================================

G5 P0 Q-3 X2 Y2

--------------------------------------------------------------------------------

(source_file
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))))

================================================================================
G codes 8
================================================================================

G90 G17
G0 X-2 Y4
G5.1 X2 I2 J-8

--------------------------------------------------------------------------------

(source_file
  (line
    (g)
    (g))
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal)))
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))))

================================================================================
G codes 9
================================================================================

G0 X0 Y0 (rapid move)
F10 (set feed rate)
G5.2 P1 L3
     X0 Y1 P1
     X2 Y2 P1
     X2 Y0 P1
     X0 Y0 P2
G5.3
; The rapid moves show the same path without the NURBS Block
G0 X0 Y1
   X2 Y2
   X2 Y0
   X0 Y0
M2

--------------------------------------------------------------------------------

(source_file
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (comment))
  (line
    (value_word
      (literal))
    (comment))
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal)))
  (line
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal)))
  (line
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal)))
  (line
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal)))
  (line
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal)))
  (line
    (g))
  (line
    (comment))
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal)))
  (line
    (value_word
      (literal))
    (value_word
      (literal)))
  (line
    (value_word
      (literal))
    (value_word
      (literal)))
  (line
    (value_word
      (literal))
    (value_word
      (literal)))
  (line
    (m)))

================================================================================
G codes 12
================================================================================

G10 L1 P1 Z1.5 (set tool 1 Z offset from the machine origin to 1.5)
G10 L1 P2 R0.015 Q3 (lathe example setting tool 2 radius to 0.015 and orientation to 3)

--------------------------------------------------------------------------------

(source_file
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (comment))
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (comment)))

================================================================================
G codes 13
================================================================================

G10 L2 P1 X3.5 Y17.2

G10 L2 P1 X0 Y0 Z0 (clear offsets for X,Y & Z axes in coordinate system 1)

--------------------------------------------------------------------------------

(source_file
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal)))
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (comment)))

================================================================================
G codes 14
================================================================================

T1 M6 G43 (load tool 1 and tool length offsets)
G10 L10 P1 Z1.5 (set the current position for Z to be 1.5)
G43 (reload the tool length offsets from the changed tool table)
M2 (end program)

--------------------------------------------------------------------------------

(source_file
  (line
    (value_word
      (literal))
    (m)
    (g)
    (comment))
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (comment))
  (line
    (g)
    (comment))
  (line
    (m)
    (comment)))

================================================================================
G codes 16
================================================================================

G10 L20 P1 X1.5 (set the X axis current location in coordinate system 1 to 1.5)

--------------------------------------------------------------------------------

(source_file
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (comment)))

================================================================================
G codes 19
================================================================================

G28 Z2.5 (rapid to Z2.5 then to Z location specified in #5163)

--------------------------------------------------------------------------------

(source_file
  (line
    (g)
    (value_word
      (literal))
    (comment)))

================================================================================
G codes 20
================================================================================

G30 Z2.5 (rapid to Z2.5 then to the Z location specified in #5183)

--------------------------------------------------------------------------------

(source_file
  (line
    (g)
    (value_word
      (literal))
    (comment)))

================================================================================
G codes 21
================================================================================

G90 (absolute distance mode)
G0 X1 Z0.1 (rapid to position)
S100 M3 (start spindle turning)
G33 Z-2 K0.125 (move Z axis to -2 at a rate to equal 0.125 per revolution)
G0 X1.25 (rapid move tool away from work)
Z0.1 (rapid move to starting Z position)
M2 (end program)

--------------------------------------------------------------------------------

(source_file
  (line
    (g)
    (comment))
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (comment))
  (line
    (value_word
      (literal))
    (m)
    (comment))
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (comment))
  (line
    (g)
    (value_word
      (literal))
    (comment))
  (line
    (value_word
      (literal))
    (comment))
  (line
    (m)
    (comment)))

================================================================================
G codes 22
================================================================================

G90 (set absolute mode)
G0 X1.000 Y1.000 Z0.100 (rapid move to starting position)
S100 M3 (turn on the spindle, 100 RPM)
G33.1 Z-0.750 K0.05 (rigid tap a 20 TPI thread 0.750 deep)
M2 (end program)

--------------------------------------------------------------------------------

(source_file
  (line
    (g)
    (comment))
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (comment))
  (line
    (value_word
      (literal))
    (m)
    (comment))
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (comment))
  (line
    (m)
    (comment)))

================================================================================
G codes 24
================================================================================

; current location is X1 after finishing cutter compensated move
G40 (turn compensation off)
G0 X1.6 (linear move longer than current cutter diameter)
M2 (end program)

--------------------------------------------------------------------------------

(source_file
  (line
    (comment))
  (line
    (g)
    (comment))
  (line
    (g)
    (value_word
      (literal))
    (comment))
  (line
    (m)
    (comment)))

================================================================================
G codes 27
================================================================================

G43 H1 (set tool offsets using the values from tool 1 in the tool table)

--------------------------------------------------------------------------------

(source_file
  (line
    (g)
    (value_word
      (literal))
    (comment)))

================================================================================
G codes 28
================================================================================

G90 (set absolute mode)
T1 M6 G43 (load tool 1 and tool length offsets, Z is at machine 0 and DRO shows Z1.500)
G43.1 Z0.250 (offset current tool offset by 0.250, DRO now shows Z1.250)
M2 (end program)

--------------------------------------------------------------------------------

(source_file
  (line
    (g)
    (comment))
  (line
    (value_word
      (literal))
    (m)
    (g)
    (comment))
  (line
    (g)
    (value_word
      (literal))
    (comment))
  (line
    (m)
    (comment)))

================================================================================
G codes 29
================================================================================

G90 (set absolute mode)
T1 M6 (load tool 1)
G43 (or G43 H1 - replace all tool offsets with T1's offset)
G43.2 H10 (also add in T10's tool offset)
M2 (end program)

--------------------------------------------------------------------------------

(source_file
  (line
    (g)
    (comment))
  (line
    (value_word
      (literal))
    (m)
    (comment))
  (line
    (g)
    (comment))
  (line
    (g)
    (value_word
      (literal))
    (comment))
  (line
    (m)
    (comment)))

================================================================================
G codes 32
================================================================================

G53 G0 X0 Y0 Z0 (rapid linear move to the machine origin)
G53 X2 (rapid linear move to absolute coordinate X2)

--------------------------------------------------------------------------------

(source_file
  (line
    (g)
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (comment))
  (line
    (g)
    (value_word
      (literal))
    (comment)))

================================================================================
G codes 36
================================================================================

G64 P0.015 (set path following to be within 0.015 of the actual path)

--------------------------------------------------------------------------------

(source_file
  (line
    (g)
    (value_word
      (literal))
    (comment)))

================================================================================
G codes 39
================================================================================

G0 Z-0.5 X0.2
G76 P0.05 Z-1 I-.075 J0.008 K0.045 Q29.5 L2 E0.045

--------------------------------------------------------------------------------

(source_file
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal)))
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))))

================================================================================
G codes 40.7
================================================================================

N100 G90 G0 X0 Y0 Z0 (move coordinate home)
N110 G1 F10 X0 G4 P0.1
N120 G91 G81 X1 Y0 Z-1 R1 L4(canned drill cycle)
N130 G90 G0 X0 Y1
N140 Z0
N150 G91 G81 X1 Y0 Z-0.5 R1 L4(canned drill cycle)
N160 G80 (turn off canned cycle)
N170 M2 (program end)

N1000 G90 G0 X0 Y0 Z0 (move coordinate home)
N1010 G1 F50 X0 G4 P0.1
N1020 G91 G81 X1 Y0 Z-0.5 R1 L4 (canned drill cycle)
N1030 X0 Y1 R0 L3 (repeat)
N1040 X-1 Y0 L3 (repeat)
N1050 X0 Y-1 L2 (repeat)
N1060 G80 (turn off canned cycle)
N1070 G90 G0 X0 (rapid move home)
N1080 Y0
N1090 Z0
N1100 M2 (program end)

--------------------------------------------------------------------------------

(source_file
  (line
    (block_number)
    (g)
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (comment))
  (line
    (block_number)
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (g)
    (value_word
      (literal)))
  (line
    (block_number)
    (g)
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (comment))
  (line
    (block_number)
    (g)
    (g)
    (value_word
      (literal))
    (value_word
      (literal)))
  (line
    (block_number)
    (value_word
      (literal)))
  (line
    (block_number)
    (g)
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (comment))
  (line
    (block_number)
    (g)
    (comment))
  (line
    (block_number)
    (m)
    (comment))
  (line
    (block_number)
    (g)
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (comment))
  (line
    (block_number)
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (g)
    (value_word
      (literal)))
  (line
    (block_number)
    (g)
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (comment))
  (line
    (block_number)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (comment))
  (line
    (block_number)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (comment))
  (line
    (block_number)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (comment))
  (line
    (block_number)
    (g)
    (comment))
  (line
    (block_number)
    (g)
    (g)
    (value_word
      (literal))
    (comment))
  (line
    (block_number)
    (value_word
      (literal)))
  (line
    (block_number)
    (value_word
      (literal)))
  (line
    (block_number)
    (m)
    (comment)))

================================================================================
G codes 41
================================================================================

G90 G81 X1 Y1 Z1.5 R2.8 (absolute distance canned cycle)
G80 (turn off canned cycle motion)
G0 X0 Y0 Z0 (rapid move to coordinate home)

G90 G81 X1 Y1 Z1.5 R2.8 (absolute distance canned cycle)
G0 X0 Y0 Z0 (rapid move to coordinate home)

N100 G90 G0 X0 Y0 Z0 (coordinate home)
N110 G1 X0 G4 P0.1
N120 G81 X1 Y0 Z0 R1 (canned drill cycle)
N130 X2
N140 X3
N150 X4
N160 Y1 Z0.5
N170 X3
N180 X2
N190 X1
N200 G80 (turn off canned cycle)
N210 G0 X0 (rapid move home)
N220 Y0
N230 Z0
N240 M2 (program end)

--------------------------------------------------------------------------------

(source_file
  (line
    (g)
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (comment))
  (line
    (g)
    (comment))
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (comment))
  (line
    (g)
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (comment))
  (line
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (comment))
  (line
    (block_number)
    (g)
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (comment))
  (line
    (block_number)
    (g)
    (value_word
      (literal))
    (g)
    (value_word
      (literal)))
  (line
    (block_number)
    (g)
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (value_word
      (literal))
    (comment))
  (line
    (block_number)
    (value_word
      (literal)))
  (line
    (block_number)
    (value_word
      (literal)))
  (line
    (block_number)
    (value_word
      (literal)))
  (line
    (block_number)
    (value_word
      (literal))
    (value_word
      (literal)))
  (line
    (block_number)
    (value_word
      (literal)))
  (line
    (block_number)
    (value_word
      (literal)))
  (line
    (block_number)
    (value_word
      (literal)))
  (line
    (block_number)
    (g)
    (comment))
  (line
    (block_number)
    (g)
    (value_word
      (literal))
    (comment))
  (line
    (block_number)
    (value_word
      (literal)))
  (line
    (block_number)
    (value_word
      (literal)))
  (line
    (block_number)
    (m)
    (comment)))

================================================================================
G codes 42
================================================================================

G90 G98 G81 X4 Y5 Z1.5 R2.8

G91 G98 G81 X4 Y5 Z-0.6 R1.8 L3

G90 G98 G81 X4 Y5 Z1.5 R2.8

G91 G98 G81 X4 Y5 Z-0.6 R1.8 L3

G90 G98 G81 X4 Y5 Z-0.6 R1.8

--------------------------------------------------------------------------------
